# compliance-copilot

./: .env.example  .gitignore  LICENSE  MANIFEST.in  README.md  config.with-alerts.yaml  config.yaml.example  pyproject.toml  setup_repo.sh  test_alerts.py
.github/workflows/: publish.yml
docs/: quickstart.md
examples/basic_rules/: access_rules.yaml  json_rules.yaml
examples/sample_data/: users.csv  users.json
examples/templates/hipaa/: README.md
examples/templates/soc2/: README.md  rules.yaml
metrics/: metrics_20260218_060140.json  metrics_20260218_061034.json  metrics_20260218_061035.json  metrics_20260218_062412.json  metrics_20260218_062413.json  metrics_20260218_063929.json
src/compliance_copilot/: __init__.py  __main__.py  cli.py  notifier.py  scheduler.py  version.py
src/compliance_copilot/config/: __init__.py  defaults.yaml  loader.py  schema.py
src/compliance_copilot/connectors/: __init__.py  base.py  bigquery_connector.py  csv_connector.py  excel_connector.py  exceptions.py  factory.py  json_connector.py  mongodb_connector.py  parquet_connector.py  pdf_connector.py  postgresql_connector.py  sql_connector.py  sqlite_connector.py
src/compliance_copilot/engine/: __init__.py  expression_evaluator.py  models.py  rule_engine.py  rule_parser.py
src/compliance_copilot/exceptions/: __init__.py
src/compliance_copilot/observability/: __init__.py  errors.py  logger.py  metrics.py  tracing.py
src/compliance_copilot/utils/: __init__.py
templates/: report.html
